Fix HTML spacing. Remove gray background to show transparent logo. Adjust logos location to be centered.

--- a/home.css
+++ b/home.css
@@ -32,7 +32,6 @@ main {
     display: flex;
     justify-content: center;
     align-items: flex-start;
-    background-color: #f7f7f7;
     padding: 20px 20px;
 }
 
@@ -246,15 +245,15 @@ menu .nav-link:hover {
 }
 
 .logo-placeholder {
-    position: absolute;
-    bottom: 20px;
+    position: fixed;
+    bottom: 15%;
     left: 50%;
     transform: translateX(-50%);
     z-index: -1;
     opacity: 0.2;
     pointer-events: none;
-    width: 300px;
-    height: 300px;
+    width: 500px;
+    height: 500px;
 }
 
 .logo-placeholder img {
@@ -306,11 +305,6 @@ menu .nav-link:hover {
 
     .box-shadow-style {
         padding: 1.5em;
-    }
-
-    .logo-placeholder {
-        width: 200px;
-        height: 200px;
     }
 }
 
